<resources>
    <string name="app_name">RContacts</string>
    <string name="facebook_app_id">1410546345629965</string>
    <string name="google_maps_key">AIzaSyBJSXzIhhMakvEuZ8JCLfbs5m1nKXf0zHA</string>
    <string name="fabric_key">06e70479d2ac89bbcd0f513bced81e424d0d41f7</string>
    <string name="server_client_id">376651096541-14itosgf92vffhppbo1fblmpa1q08kf1.apps.googleusercontent.com</string>
    <string name="msg_try_later">There is some error! Please try again later.</string>
    <string name="msg_no_internet">Please check your internet connection.</string>
    <string name="msg_unsaved_details">Some details are left unsaved. Are you sure you want to proceed?</string>
    <string name="msg_please_wait">Please Wait&#8230;</string>
    <string name="msg_in_progress">In Progress&#8230;</string>
    <string name="msg_no_network">Please check your network connection.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_call">Call</string>
    <string name="action_delete">Delete</string>
    <string name="action_accept">Accept</string>
    <string name="str_comment">Comment</string>
    <string name="hint_comment">Wanna say something?</string>
    <string name="str_choose_from_contacts">Choose from Contacts</string>
    <string name="str_select_social_media">Select Social Media</string>
    <string name="str_select_all">Select all</string>
    <string name="str_fetching_address">Fetching address...</string>
    <string name="str_searching">Searching...</string>
    <string name="error_no_placeholders">No placeholders</string>
    <string name="str_title">Title</string>
    <string name="str_message">Message</string>
    <string name="str_welcom">WELCOME</string>
    <string name="str_welcom_message">It\'s Time For Your Contacts To Get SMARTER</string>
    <string name="str_done">Done</string>
    <string name="str_vcf_done">VCF file generated successfully!!</string>
    <string name="verify_now">Verify now</string>
    <string name="str_search_name">Name or Number</string>
    <string name="error_facebook_login_cancelled">Facebook Login Cancelled!!</string>
    <string name="error_retrieving_details">Error in Retrieving Details!</string>
    <string name="description_registration_logo">Registration Logo</string>
    <string name="str_content_description">Content Description</string>
    <string name="title_verify_number">Verify Your Phone Number</string>
    <string name="msg_enter_number">Please Confirm your Country Code and Enter Your Phone Number</string>
    <string name="action_submit">Submit</string>
    <string name="action_restore">Let\'s go</string>
    <string name="str_restore">Restore profile</string>
    <string name="str_restoring">Restore Your Profile Details And Get Hold Of The Stored Information In Your RContacts Profile.If You Don\'t Restore Now, You Won\'t Be Able To Restore It Later!</string>
    <string name="hint_search">Search</string>
    <string name="description_action_back">Description Action Back</string>
    <string name="error_invalid_number">Please add valid Number</string>
    <string name="msg_empty_country">No Country Available</string>
    <string name="title_verification">Verification</string>
    <string name="title_verifying_mobile_number"><![CDATA[Sit back & relax! while we verify your Mobile Number]]></string>
    <string name="msg_enter_otp">Enter the 6-digit OTP below in case we fail to detect it automatically</string>
    <string name="action_resend">Resend</string>
    <string name="action_call_me">Call Me</string>
    <string name="msg_otp_verification_success">OTP Verified Successfully</string>
    <string name="error_otp_verification_fail">OTP doesn\'t match</string>
    <string name="msg_otp_error">Please enter valid OTP</string>
    <string name="error_otp_length_incorrect">Please add %1$d digit OTP!</string>
    <string name="msg_success_otp_request">OTP Request sent successfully!</string>
    <string name="error_otp_expired">This OTP is expired. Please try again!</string>
    <string name="action_register">Register</string>
    <string name="action_continue">Continue</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_aadhar_number">Aadhar Number</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email_id">Email ID</string>
    <string name="text_or">or</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_google">Google</string>
    <string name="text_linked_in">LinkedIn</string>
    <string name="title_profile_registration">Profile Registration</string>
    <string name="title_activity_contacts_main">ContactsMainActivity</string>
    <string name="title_my_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_all_organizations">All Organizations</string>
    <string name="action_close">Close</string>
    <string name="action_ok">OK</string>
    <string name="str_social_contact">Social Contact</string>
    <string name="str_edit_my_profile">Edit My Profile</string>
    <string name="str_first">First</string>
    <string name="str_last">Last</string>
    <string name="str_organization">Organization</string>
    <string name="str_company_name">Company Name</string>
    <string name="enter_or_select_your_organisation">Enter or Select your organisation</string>
    <string name="type_here_hint">Type here...</string>
    <string name="search_no_organisation">Organisation is not verified</string>
    <string name="str_org">Organizations</string>
    <string name="str_rate_app">RATE APP</string>
    <string name="str_later">ASK ME LATER</string>
    <string name="str_like_this_application">LIKE THIS APPLICATION</string>
    <string name="str_rate_app_body">If you like our app, please take a moment to rate us!</string>
    <string name="str_profile_details_privacy">PROFILE DETAILS PRIVACY</string>
    <string name="str_organisation_privacy_body">Your profile details including Aadhaar Number will be visible to the selected organisation from the organisation
        list against privacy setting.</string>
    <string name="str_tab_r_contact">RContacts</string>
    <string name="text_tab_rcontact">RContacts</string>
    <string name="tab_r_contact">RContacts</string>
    <string name="str_designation">Current Designation</string>
    <string-array name="types_language">
        <item>English</item>
        <item>हिंदी</item>
        <item>ગુજરાતી</item>
    </string-array>
    <string-array name="phonebook_contact_array_share">
        <item>Share all</item>
        <item>Share via sms</item>
        <item>Share via email</item>
    </string-array>
    <string-array name="phonebook_contact_array_invite">
        <item>Invite</item>
        <item>Invite via SMS</item>
        <item>Invite via Email</item>
    </string-array>
    <string-array name="types_phone_number">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
        <item>Main</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>
    <string-array name="types_email_address">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linked_in">LinkedIn</string>
    <string name="google_plus">GooglePlus</string>
    <string name="instagram">Instagram</string>
    <string name="pinterest">Pinterest</string>
    <string name="other">Other</string>
    <string name="custom">Custom</string>
    <string-array name="types_social_media">
        <item>@string/facebook</item>
        <item>@string/twitter</item>
        <item>@string/linked_in</item>
        <item>@string/google_plus</item>
        <item>@string/instagram</item>
        <item>@string/pinterest</item>
    </string-array>
    <string-array name="types_Event">
        <item>Birthday</item>
        <item>Anniversary</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>
    <string name="show_call_history">Show Call history</string>
    <string name="send_sms">Send SMS</string>
    <string name="remove_from_call_log">Remove from Call Log</string>
    <string name="copy_phone_number">Copy Phone Number</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="call_reminder">Call Reminder</string>
    <string name="str_hide_year">Hide Year</string>
    <string name="str_i_currently_work_here">I Currently Work Here</string>
    <string name="nav_text_home">Home</string>
    <string name="nav_text_account">Account</string>
    <string name="nav_text_timeline">Timeline</string>
    <string name="nav_text_events">Events</string>
    <string name="nav_text_rating_history">Rating History</string>
    <string name="nav_text_invite_contact">Invite contacts</string>
    <string name="nav_text_relation_recommendation">Relation Recommendation</string>
    <string name="nav_text_share_rcontact">Share RContacts App</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_block_contact">Block Contact List</string>
    <string name="nav_text_rate_us">Rate us</string>
    <string name="nav_text_about_help">About and Help</string>
    <string name="nav_text_export_db">Export DB</string>
    <string name="nav_text_feedback">Feedback</string>
    <string name="past_5_days">Past 5 Days</string>
    <string name="recent_events">Recent Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_pending_requests">Past Pending Requests</string>
    <string name="past_received_response">Past Received Responses</string>
    <string name="text_custom">Custom</string>
    <string name="msg_please_enter_some_comment">Please enter some comment first!</string>
    <string name="text_wishes_on_your">wished you on your \u0020</string>
    <string name="text_year_old">Year Old</string>
    <string name="text_years_old">Years Old</string>
    <string name="text_on">\u0020on\u0020</string>
    <string name="text_you_wrote_on_timeline">You wrote on %1$s\'s Timeline</string>
    <string name="text_reply_you_on_your">%1$s replied to your message</string>
    <string name="text_rate_you">Rated you</string>
    <string name="text_rating_done">Given</string>
    <string name="text_rating_receive">Received</string>
    <string name="text_tab_profile">Profile</string>
    <string name="text_tab_request">Requests</string>
    <string name="text_tab_response">Responses</string>
    <string name="text_tab_comments">Comments</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_you_rated">You rated</string>
    <string name="text_rated_you">Rated you</string>
    <string name="title_confirm_password">Configure Password</string>
    <string name="msg_enter_password">To prevent unauthorized access please set password.</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="msg_tip_password">The password should be of min 4 characters</string>
    <string name="title_password_protected">Password Protected</string>
    <string name="msg_enter_password_tips">Please enter password to access and open account.</string>
    <string name="str_enter_password">Enter Password</string>
    <string name="action_login">Login</string>
    <string name="action_forget_password">Forgot Password</string>
    <string name="hint_choose_from_date">From date</string>
    <string name="hint_choose_to_date">To date</string>
    <string name="school_college_name">School / College name</string>
    <string name="field_of_study">Field of study</string>
    <string name="i_currently_study_here">I currently study here</string>
</resources>