<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/nav_text_home" />

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_user_circle"
            android:icon="@drawable/ic_menu_user_circle"
            android:title="@string/nav_text_account" />
        <item
            android:id="@+id/nav_user_timeline"
            android:icon="@drawable/ic_menu_user_circle"
            android:title="@string/nav_text_timeline" />
        <item
            android:id="@+id/nav_user_events"
            android:icon="@drawable/ic_menu_user_circle"
            android:title="@string/nav_text_events" />
        <item
            android:id="@+id/nav_user_rating_history"
            android:icon="@drawable/ic_menu_user_circle"
            android:title="@string/nav_text_rating_history" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_menu_invite"
            android:title="@string/nav_text_invite_contact" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_text_share_rcontact" />

    </group>


    <!-- <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_setting"
             android:icon="@drawable/ic_menu_settings"
             android:title="Settings" />
         <menu>
             <group>
                 <item
                     android:id="@+id/nav_blocked_contacts"
                     android:title="Block Contact List"
                     android:icon="@drawable/ic_menu_Block"></item>
             </group>
         </menu>
     </group>-->

    <group>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_text_settings" />
        <item
            android:id="@+id/nav_blocked_contacts"
            android:icon="@drawable/ic_block"
            android:title="@string/nav_text_block_contact" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_rate"
            android:title="@string/nav_text_rate_us" />
        <item
            android:id="@+id/nav_about_and_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_text_about_help" />

    </group>

    <item
        android:id="@+id/nav_db_export"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/nav_text_export_db"
        android:visible="false" />

</menu>