<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_row_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_toStartOf="@+id/delete_education"
                android:hint="@string/school_college_name"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/delete_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_delete"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/input_field_of_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp"
            android:hint="@string/field_of_study"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small_tiny">

            <EditText
                android:id="@+id/input_from_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/hint_choose_from_date"
                android:inputType="datetime"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_14sp"/>

            <ImageView
                android:id="@+id/image_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:contentDescription="@string/str_content_description"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_date_picker"/>

            <EditText
                android:id="@+id/input_to_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/hint_choose_to_date"
                android:inputType="datetime"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_14sp"/>

            <ImageView
                android:id="@+id/image_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:contentDescription="@string/str_content_description"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_date_picker"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/i_currently_study_here"
                android:textColor="@color/darkGray"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>