<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar_set_password"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include_toolbar"
        android:paddingBottom="@dimen/activity_half_vertical_margin"
        android:paddingLeft="@dimen/activity_half_vertical_margin"
        android:paddingRight="@dimen/activity_half_vertical_margin"
        android:paddingTop="@dimen/activity_double_horizontal_margin"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            tools:context=".SetPasswordActivity">


            <ImageView
                android:id="@+id/image_set_password_logo"
                android:layout_width="@dimen/password_logo"
                android:layout_height="@dimen/password_logo"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/description_registration_logo"
                android:src="@drawable/img_set_password" />

            <TextView
                android:id="@+id/text_configure_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_set_password_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_double_horizontal_margin"
                android:text="@string/title_confirm_password"
                android:textColor="@color/colorVeryDarkGrayishBlue1"
                android:textSize="@dimen/subtitle" />

            <TextView
                android:id="@+id/text_msg_set_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_configure_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_half_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/msg_enter_password"
                android:textColor="@color/colorVeryDarkGrayishBlue2"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/linear_layout_edit_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_msg_set_password"
                android:layout_marginEnd="@dimen/activity_half_vertical_margin"
                android:layout_marginStart="@dimen/activity_half_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_vertical_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_set_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/input_set_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/str_confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </LinearLayout>

            <com.rawalinfocom.rcontact.helper.RippleView
                android:id="@+id/ripple_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_edit_box"
                android:layout_marginEnd="@dimen/activity_half_vertical_margin"
                android:layout_marginStart="@dimen/activity_half_vertical_margin"
                android:layout_marginTop="@dimen/activity_double_horizontal_margin"
                app:rv_alpha="@integer/alpha_ripple"
                app:rv_color="@color/colorWhite"
                app:rv_rippleDuration="@integer/duration_ripple">

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_rounded_corner"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/action_register"
                    android:textColor="@color/colorWhite" />

            </com.rawalinfocom.rcontact.helper.RippleView>

            <TextView
                android:id="@+id/text_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ripple_register"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/activity_half_vertical_margin"
                android:gravity="center"
                android:text="@string/msg_tip_password"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/sub_content" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>