<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar_set_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include_toolbar"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_half_vertical_margin"
        android:paddingLeft="@dimen/activity_half_vertical_margin"
        android:paddingRight="@dimen/activity_half_vertical_margin"
        android:paddingTop="@dimen/activity_half_vertical_margin"
        tools:context=".SetPasswordActivity">


        <ImageView
            android:id="@+id/image_set_password_logo"
            android:layout_width="@dimen/password_logo"
            android:layout_height="@dimen/password_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/description_registration_logo"
            android:src="@drawable/img_enter_password" />

        <TextView
            android:id="@+id/text_password_protected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_set_password_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_half_horizontal_margin"
            android:text="@string/title_password_protected"
            android:textColor="@color/colorVeryDarkGrayishBlue1"
            android:textSize="@dimen/subtitle" />

        <TextView
            android:id="@+id/text_msg_enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_password_protected"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_margin"
            android:gravity="center_horizontal"
            android:text="@string/msg_enter_password_tips"
            android:textColor="@color/colorVeryDarkGrayishBlue2"
            android:textSize="@dimen/content" />

        <LinearLayout
            android:id="@+id/linear_layout_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_msg_enter_password"
            android:layout_marginTop="@dimen/activity_half_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_enter_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </LinearLayout>

        <com.rawalinfocom.rcontact.helper.RippleView
            android:id="@+id/ripple_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_edit_box"
            android:layout_marginTop="@dimen/activity_half_horizontal_margin"
            app:rv_alpha="@integer/alpha_ripple"
            app:rv_color="@color/colorWhite"
            app:rv_rippleDuration="@integer/duration_ripple">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/action_login"
                android:textColor="@color/colorWhite" />

        </com.rawalinfocom.rcontact.helper.RippleView>

        <com.rawalinfocom.rcontact.helper.RippleView
            android:id="@+id/ripple_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ripple_login"
            android:layout_marginTop="@dimen/activity_half_horizontal_margin"
            app:rv_alpha="@integer/alpha_ripple"
            app:rv_color="@color/colorWhite"
            app:rv_rippleDuration="@integer/duration_ripple">

            <Button
                android:id="@+id/button_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_border_gray"
                android:text="@string/action_forget_password"
                android:textColor="@color/textColorButton" />

        </com.rawalinfocom.rcontact.helper.RippleView>

    </RelativeLayout>

</RelativeLayout>